# tpRigToolkit-tools-rigbuilder-dccs-maya

./: .travis.yml  LICENSE  README.md  README.rst  requirements.txt  setup.cfg  setup.py
tests/: test_general.py
tpRigToolkit/tools/rigbuilder/: __init__.py
tpRigToolkit/tools/rigbuilder/dccs/: __init__.py
tpRigToolkit/tools/rigbuilder/dccs/maya/: __logging__.ini  __version__.py
tpRigToolkit/tools/rigbuilder/dccs/maya/core/: __init__.py  utils.py
tpRigToolkit/tools/rigbuilder/dccs/maya/data/: mayaascii.py  skincluster.py
tpRigToolkit/tools/rigbuilder/dccs/maya/rig/core/: __init__.py  control.py  joint.py  rig.py
tpRigToolkit/tools/rigbuilder/dccs/maya/rig/modules/: __init__.py  controlrig.py  fkrig.py  iklimbrig.py
