[metadata]
name = tpRigToolkit-tools-rigbuilder-dccs-maya
description = Maya specific implementation for tpRigToolkit-tools-rigbuilder
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: tpRigToolkit.tools.rigbuilder.dccs.maya.__version__.__version__
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpRigToolkit/tpRigToolkit-tools-rigbuilder-dccs-maya

[options]
zip_safe = false
include_package_data = true
packages=find:
install_requires=
    tpRigToolkit-core
    tpRigToolkit-tools-rigbuilder

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1